# cecil-old

gendarme/: AUTHORS  AssemblyInfo.cs.in  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  gendarme.in  gendarme.mds  gendarme.sln
gendarme/console/: ChangeLog  ConsoleRunner.cs  HtmlResultWriter.cs  IResultWriter.cs  Makefile.am  TextResultWriter.cs  XmlResultWriter.cs  console.mdp  gendarme.csproj  gendarme.xsl
gendarme/framework/: AssemblyManager.cs  ChangeLog  Gendarme.Framework.csproj  IRule.cs  Location.cs  Makefile.am  Message.cs  MessageCollection.cs  RuleCollection.cs  RuleInformation.cs  RuleInformationManager.cs  Runner.cs  Violation.cs  Violations.cs  framework.mdp  gendarme-framework.pc.in
gendarme/framework/Gendarme.Framework/: ChangeLog  MethodSignature.cs  MethodSignatures.cs
gendarme/framework/Gendarme.Framework.Rocks/: AssemblyRocks.cs  ChangeLog  CustomAttributeRocks.cs  FieldRocks.cs  MethodRocks.cs  TypeRocks.cs
gendarme/framework/Test/: ChangeLog  Test.Framework.mdp
gendarme/framework/Test/Gendarme.Framework/: ChangeLog  MethodSignatureTest.cs
gendarme/framework/Test/Gendarme.Framework.Rocks/: ChangeLog  CustomAttributeRocksTest.cs  FieldRocksTest.cs  MethodRocksTest.cs  TypeRocksTest.cs
gendarme/man/: gendarme.1.in
gendarme/rules/: ChangeLog  Makefile.am  rules.md-nunit  rules.mds  rules.xml  tests.mds
gendarme/rules/Gendarme.Rules.BadPractice/: ChangeLog  CloneMethodShouldNotReturnNullRule.cs  ConstructorShouldNotCallVirtualMethodsRule.cs  EqualShouldHandleNullArgRule.cs  Gendarme.Rules.BadPractice.mdp  Gendarme.Rules.BadPractice.xml.in  ImplementingEqualsButNotGetHashCodeAndViceVersaRule.cs  Makefile.am  ToStringReturnsNullRule.cs
gendarme/rules/Gendarme.Rules.BadPractice/Test/: ChangeLog  ConstructorShouldNotCallVirtualMethodsTest.cs  Makefile.am  (+4 more)
gendarme/rules/Gendarme.Rules.Concurrency/: ChangeLog  DoubleCheckLockingRule.cs  Gendarme.Rules.Concurrency.csproj  Gendarme.Rules.Concurrency.mdp  Gendarme.Rules.Concurrency.xml.in  Makefile.am  WriteStaticFieldFromInstanceMethodRule.cs
gendarme/rules/Gendarme.Rules.Correctness/: AvoidConstructorsInStaticTypesRule.cs  BadRecursiveInvocationRule.cs  CallingEqualsWithNullArgRule.cs  ChangeLog  FloatComparisonRule.cs  Gendarme.Rules.Correctness.csproj  Gendarme.Rules.Correctness.mdp  Gendarme.Rules.Correctness.xml.in  Makefile.am  MethodCanBeMadeStatic.cs  MethodCanBeMadeStaticRule.cs  NonNullAttribute.cs  NonNullAttributeCollector.cs  NullDerefAnalysis.cs  NullDerefFrame.cs  NullDerefRule.cs  OpCodeConstants.cs  UseValueInPropertySetterRule.cs
gendarme/rules/Gendarme.Rules.Design/: ChangeLog  DisposableFieldsShouldBeDisposedRule.cs  DisposableHelper.cs  DisposableTypesShouldHaveFinalizerRule.cs  DontDeclareProtectedFieldsInSealedClassRule.cs  Gendarme.Rules.Design.mdp  Gendarme.Rules.Design.xml.in  Makefile.am  ProvideAlternativeNamesForOperatorOverloadsRule.cs  TypesShouldBeInsideNamespacesRule.cs  TypesWithDisposableFieldsShouldBeDisposableRule.cs  TypesWithNativeFieldsShouldBeDisposableRule.cs  UsingCloneWithoutImplementingICloneableRule.cs
gendarme/rules/Gendarme.Rules.Exceptions/: ChangeLog  DontDestroyStackTrace.cs  DontSwallowErrorsCatchingNonspecificExceptionsRule.cs  Gendarme.Rules.Exceptions.csproj  Gendarme.Rules.Exceptions.mdp  Gendarme.Rules.Exceptions.xml.in  ISEHCatchBlock.cs  ISEHGuardedBlock.cs  ISEHHandlerBlock.cs  Makefile.am  SEHHandlerType.cs
gendarme/rules/Gendarme.Rules.Interoperability/: ChangeLog  Gendarme.Rules.Interoperability.xml.in  GetLastErrorMustBeCalledRightAfterPInvokeRule.cs  Makefile.am  UseManagedAlternativesToPInvokeRule.cs
gendarme/rules/Gendarme.Rules.Naming/: AttributeEndsWithAttributeSuffixRule.cs  ChangeLog  DetectNonAlphaNumericsInTypeNamesRule.cs  EnumNotEndsWithEnumOrFlagsSuffixRule.cs  Gendarme.Rules.Naming.mdp  Gendarme.Rules.Naming.xml.in  Makefile.am  NamingUtils.cs  ParameterNamesShouldMatchOverridenMethodRule.cs  UseCorrectCasingRule.cs  UseCorrectPrefixRule.cs  UseCorrectSuffixRule.cs  UsePluralNameInEnumFlagsRule.cs  UsePreferredTermsRule.cs  UseSingularNameInEnumsUnlessAreFlagsRule.cs
gendarme/rules/Gendarme.Rules.Performance/: AvoidToStringOnStringsRule.cs  AvoidUncalledPrivateCodeRule.cs  AvoidUninstantiatedInternalClassesRule.cs  AvoidUnusedParametersRule.cs  ChangeLog  DontIgnoreMethodResultRule.cs  EmptyDestructorRule.cs  Gendarme.Rules.Performance.csproj  Gendarme.Rules.Performance.mdp  Gendarme.Rules.Performance.xml.in  IDisposableWithDestructorWithoutSuppressFinalizeRule.cs  Makefile.am  UseStringEmptyRule.cs  UsingStringLengthInsteadOfCheckingEmptyStringRule.cs
gendarme/rules/Gendarme.Rules.Portability/: ChangeLog  ExitCodeIsLimitedOnUnixRule.cs  FeatureRequiresRootPrivilegeOnUnixRule.cs  Gendarme.Rules.Portability.csproj  Gendarme.Rules.Portability.mdp  Gendarme.Rules.Portability.xml.in  Makefile.am  MonoCompatibilityReviewRule.cs  NewLineLiteralRule.cs
gendarme/rules/Gendarme.Rules.Security/: ChangeLog  Gendarme.Rules.Security.csproj  Gendarme.Rules.Security.mdp  Gendarme.Rules.Security.xml.in  Makefile.am  MethodCallWithSubsetLinkDemandRule.cs  NonVirtualMethodWithInheritanceDemandRule.cs  SealedTypeWithInheritanceDemandRule.cs  SecureGetObjectDataOverridesRule.cs  TypeExposeFieldsRule.cs  TypeIsNotSubsetOfMethodSecurityRule.cs  TypeLinkDemandRule.cs
gendarme/rules/Gendarme.Rules.Smells/: AvoidCodeDuplicatedInSameClassRule.cs  AvoidCodeDuplicatedInSiblingClassesRule.cs  AvoidLargeClassesRule.cs  AvoidLongMethodsRule.cs  AvoidLongParameterListsRule.cs  AvoidSpeculativeGeneralityRule.cs  ChangeLog  CodeDuplicatedLocator.cs  Expression.cs  ExpressionFillerVisitor.cs  Gendarme.Rules.Smells.mdp  Gendarme.Rules.Smells.xml.in  Makefile.am  Utilities.cs
gendarme/rules/Gendarme.Rules.Ui/: ChangeLog  ExecutableTargetRule.cs  Gendarme.Rules.Ui.mdp  Gendarme.Rules.Ui.xml.in  GtkSharpExecutableTargetRule.cs  Makefile.am  SystemWindowsFormsExecutableTargetRule.cs  UseSTAThreadAttributeOnSWFEntryPointsRule.cs
permview/: ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  permview.cs  permview.in
(+1654 files in other folders)
